# vibe-marketing

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
assets/: capabilities.json  sales_script.json
n8n/: workflow-reel-processor.json
plans/: _index.json
plans/2026-02-27_DPzYl41ifys/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DR73XbbiNck/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DRKkp3clZYY/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DRfD8FEk4eY/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DT2vTjXmHXJ/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DT56UEjESY0/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DVB32zvj91u/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DVMEB0Rke13/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DVMLYHrD9Mr/: analysis.json  metadata.json  plan.md  transcript.txt
plans/2026-02-27_DVMahdPDu1A/: analysis.json  (+3 more)
scripts/: agent_loop.py  backfill_registry.py  backup-plans.sh  deploy-agent.sh  deploy.sh  process_reel.py  reelbot-agent.service  setup.sh
src/: config.py  constants.py  main.py  models.py
static/: dashboard.html  knowledge.html  plan_view.html  review.html  script.html
tests/: conftest.py  test_downloader.py  test_executor.py  test_pipeline.py  test_plan_writer_json.py  test_planner.py  test_script.py  test_transcriber.py
(+48 files in other folders)
